~(FEAT) GuestTabServiceTest [WIP]